# zazaki_tokenizer-

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
data/: cl100k_base.tiktoken  o200k_base.tiktoken
docs/superpowers/plans/: 2026-05-25-tokenizer-plan.md
docs/superpowers/specs/: 2026-05-25-tokenizer-design.md
scripts/: convert_hf_tokenizer.py  generate_tiktoken.py
src/bindings/: CMakeLists.txt  python_bindings.cpp  zazaki_tokenizer.py
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  registry.cpp  registry.h  tokenizer.cpp  tokenizer.h
src/core/openai/: encoder.cpp  encoder.h  tiktoken_file.cpp  tiktoken_file.h
tests/: CMakeLists.txt  test_encoder.cpp  test_python.py  test_registry.cpp  test_tokenizer.cpp
zazaki_tokenizer/: __init__.py  cli.py
zazaki_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
